change href value

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
   <footer>
    <ul>
    <li><a href="mailto:zhanglliqun@gmail.com">email</a></li>
-   <li><a href="https://github.com/lymanzhang/gdShowroom">github.com/lymanzhang/gdShowroom</a></li>
+   <li><a href="https://github.com/lymanzhang/lymanzhang.github.io">github.com/lymanzhang/lymanzhang.github.io</a></li>
    </ul>
   </footer>
   </body>
